<resources>
    <string name="app_name">Eclairios Solutions V3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Eclairios Solutions</string>
    <string name="nav_header_subtitle">wwww.Eclairios.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="login_email_hint">Email Address</string>
    <string name="menu_gallery">Gallery</string>
    <string name="login_password_hint">Password</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>
    <string name="Welcome_to">WELCOME TO</string>
    <string name="employee_login">Employee Login</string>
    <string name="management_login">Management Login</string>
    <string name="Reg_name_hint">Employee Name</string>
    <string name="reg_email_hint">Employee Email Address</string>
    <string name="reg_cnic_hint">Employee CNIC</string>
    <string name="admin_login">Admin Login</string>
    <string name="fname">Please enter first name</string>
    <string name="lname">Please enter last name</string>
    <string name="empemail">Please insert correct email address</string>
    <string name="ecnic">please insert correct CNIC</string>
    <string name="password">Password must be 8 characters minimum containing 1 numeric,1 uppercase, 1 lowercase and 1 special character</string>
    <string name="conpassword">Password does not match !</string>
    <string name="phno">Please insert correct phone number</string>
</resources>
