<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.WelcomeActivity">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_fade"
        android:fontFamily="sans-serif-condensed"
        android:paddingTop="30sp"
        android:text="@string/Welcome_to"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView

        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100sp"
        android:paddingBottom="30dp"
        android:src="@drawable/logoe"
        tools:ignore="ContentDescription"

        />


    <androidx.cardview.widget.CardView
        android:layout_width="300sp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fadingEdge="horizontal"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp"
        android:soundEffectsEnabled="true"
        app:cardMaxElevation="10dp">

        <TextView
            android:id="@+id/buttonEmpLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:onClick="btnEmpLoginListener"
            android:text="@string/employee_login"
            android:textColor="@color/whiteCardColor"
            android:textSize="20dp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="300sp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fadingEdge="horizontal"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp">

        <TextView
            android:id="@+id/buttonMgtLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:onClick="btnMgtLoginListener"
            android:text="Employee Sign up"
            android:textColor="@color/whiteCardColor"
            android:textSize="20dp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="300sp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fadingEdge="horizontal"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="25dp"
        app:cardElevation="5dp">

        <TextView
            android:id="@+id/buttonAdminLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:onClick="btnAdminLoginListener"
            android:text="@string/admin_login"
            android:textColor="@color/whiteCardColor"
            android:textSize="20dp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


</LinearLayout>